# all-things

./: .gitignore
cider-text/: Pattern.hs  english  english.cache
cidertext/: main.hs
cw-data/: cwData.cabal
cw-data/exportableData/: uniquePlayers
cw-data/src/: CWData.hs  main.hs
cwdata/: LICENSE  cwData.cabal  playerRanks
cwdata/exportableData/: uniqueAuthors
duck-graphics/: DuckGraphics.cabal  backup.sh  make.sh  tags
duck-graphics/src/: DuckGraphics.hs
duck-script/: DuckScript.cabal  FunctionString.cabal  README.md
duck-script/src/: DuckScript.hs  test.txt
duck-script/src/DuckScript/: SentenceID.hs
euclidean-gloss/: EuclideanGloss.cabal
euclidean-gloss/src/: EuclideanGloss.hs
euclidean-tests/arcintersect/: Main.hs
euclidean-tests/arcpathtest/: Main.hs
euclidean-tests/circleintersect/: Main.hs
euclidean-tests/distances/: Main.hs
euclidean-tests/episode1/: Main.hs
euclidean-tests/framefractal/: Main.hs
euclidean-tests/functiongraph/: Main.hs
euclidean-tests/kiyaballs/: Main.hs
euclidean-tests/pathtest/: Main.hs
euclidean-tests/polygonintersect/: Main.hs
euclidean-tests/reflectedcircle/: Main.hs
euclidean-tests/running/: Main.hs
euclidean-things/: EuclideanThings.cabal  README.md  backup.sh  make.sh
indent-parse/: IndentParse.cabal  README.md
indent-parse/examples/: test.txt
indent-parse/src/: IndentParse.hs
linear-tools/: LinearTools.cabal  README.md
linear-tools/src/: LinearTools.hs
say-number/: SayNumber.hs
sounds-of-duck/: README.md  SoundsOfDuck.cabal
tee-client/: README.md  TeeClient.cabal  makefile
(+43 files in other folders)
